# net-ebpf-playground

./: .gitignore  Dockerfile  Makefile  README.md  topology.sh
basic-node-firewall/: Cargo.toml  vmlinux.h
basic-node-firewall/basic-node-firewall/: Cargo.toml
basic-node-firewall/basic-node-firewall-common/src/: lib.rs
basic-node-firewall/basic-node-firewall-ebpf/: Cargo.toml
basic-node-firewall/basic-node-firewall-ebpf/src/: main.rs
basic-node-firewall/basic-node-firewall-loader/: Cargo.toml
basic-node-firewall/basic-node-firewall-loader/src/: main.rs
basic-node-firewall/basic-node-firewall/k8s-packaging/: basic-node-firewall-ds.yaml
basic-node-firewall/basic-node-firewall/src/: main.rs
basic-node-firewall/xtask/src/: run.rs
bpf/: connect.bpf.c  filter.bpf.c  pass.bpf.c  sk_lookup.bpf.c  sock_ops.bpf.c  sockops_map.bpf.h  tc_udp.bpf.c  xdp_udp.bpf.c
socket-redirection/: Cargo.toml  README.md
socket-redirection/.vim/: coc-settings.json
socket-redirection/socket-redirection/: Cargo.toml
socket-redirection/socket-redirection-common/: Cargo.toml
socket-redirection/socket-redirection-common/src/: lib.rs
socket-redirection/socket-redirection-ebpf/: Cargo.toml
socket-redirection/socket-redirection-ebpf/src/: main.rs
socket-redirection/socket-redirection/src/: main.rs
socket-redirection/xtask/src/: build_ebpf.rs  run.rs
userspace/: attach-sklookup.c
userspace-c/: attach-sklookup.c
userspace-go/: Makefile  README.md  bpf_bpfeb.go  bpf_bpfel.go  go.mod  kprobe-tmp.txt  userspace-go  xdp_udp.go
