[package]
name = "socket-redirection"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
socket-redirection-common = { path = "../socket-redirection-common", features=["user"] }
anyhow = "1.0.42"
log = "0.4"
simplelog = "0.12"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
thiserror = "1"

[[bin]]
name = "socket-redirection"
path = "src/main.rs"
